--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "axios-hooks": "^1.7.2",
     "bootstrap": "^4.4.1",
     "json-server": "^0.15.1",
     "react": "^16.12.0",
